some refactoring to prepare fennec build
Signed-off-by: Juergen Albert <j.albert@data-in-motion.biz>